--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
-@import "nullstyle.scss";
-@import "ibg.scss";
-@import "footer.scss";
+@import "./nullstyle.scss";
+
 
  
 $marginMobile: 0px 0px 30px 0px;
@@ -193,7 +192,7 @@ body{
 .block {
     position: relative;
     z-index: 10;
-    .block__title {
+    &__title {
         @include adaptiv-font(45, 25);
         font-weight: 700;
         letter-spacing: 2px;
@@ -383,9 +382,6 @@ body{
 .swiper {
     margin: 0px 0px 50px 0px;
     .swiper__title {
-        @include adaptiv-font(45, 25);
-        font-weight: 700;
-        letter-spacing: 2px;
         margin: 0px 0px 50px 0px;
         &::before{
             content: '';
@@ -487,9 +483,6 @@ body{
     position: relative;
     z-index: 0;
     .form__title {
-        @include adaptiv-font(45, 25);
-        font-weight: 700;
-        letter-spacing: 2px;
         margin: 0px 0px 50px 0px;
         position: relative;
         z-index: 1;
@@ -612,12 +605,20 @@ body{
         max-width: 100px;
         padding: 5px 15px;
         margin: 0 auto;
-        background-color: #fff;
+        background: none;
+        border: 1px solid #fff;
+        transition: all 0.5s ease;
         span{
             text-transform: uppercase;
             letter-spacing: 3px;
             font-weight: 600;
-            color: #121212;
+            color: #fff;
+        }
+        &:hover{
+            background-color: #646464;
+        }
+        &:active{
+            background-color: #333333;
         }
     }
 }
@@ -626,7 +627,93 @@ textarea{
 }
 .form__input{
     &._error{
-        box-shadow: 0 0 15px red;
+        
+        box-shadow: 0 0 5px red;
         opacity: 1;
     }
+}
+
+//===========================
+.foot {
+    background-color: #4E0E1F;
+    padding: 20px 40px;
+    
+    .foot_columns {
+        display: flex;
+        padding: 0 5px;
+    }
+    .foot__column {
+    }
+    .foot__title{
+        margin: 0px 0px 10px 0px;
+        text-align: right;
+        @include adaptiv-font(18, 12)
+    }
+    @media (max-width:767px) {
+        .foot__title{
+            margin-bottom: 3px;
+        }
+    }
+}
+.foco {
+    flex: 0 1 auto;
+    display: flex;
+    flex-direction: column;
+    .foco__title {
+
+    }
+    .foco__list {
+        li{
+        margin-bottom: 10px;
+        }
+        @media (max-width:767px) {
+                li{
+    
+                    margin-bottom: 0px;
+                }
+        }
+    }
+    .foco__link {
+        a{
+            color: #fff;
+            @include adaptiv-font(10, 6)
+        }
+    }
+
+}
+
+.middle {
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .middle__list {
+        display: flex;
+        gap: 5px;
+    }
+    .middle__link {
+        a{
+        font-size: 10px;
+        color: #fff;
+        }
+    }
+}
+
+
+.right {
+    flex: 0 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    .right__list {
+        text-align: right;
+    }
+    .right__link {
+    }
+}
+
+.a_adress{
+    text-decoration: underline;
+    color: white;
+    @include adaptiv-font(10, 6)
 }
