--- a/css/style.css
+++ b/css/style.css
@@ -773,10 +773,11 @@ textarea {
   opacity: 1;
 }
 
-.foot {
+footer {
   background-color: #4E0E1F;
   padding: 20px 40px;
 }
+
 .foot .foot_columns {
   display: flex;
   padding: 0 5px;
@@ -836,7 +837,7 @@ textarea {
 }
 .middle .middle__list {
   display: flex;
-  gap: 5px;
+  gap: 15px;
 }
 .middle .middle__link a {
   font-size: 10px;
