--- a/css/style.css
+++ b/css/style.css
@@ -177,9 +177,6 @@ body {
   padding: 0 20px;
 }
 
-.about {
-  margin: 0px 0px 50px 0px;
-}
 .about .about__body {
   gap: 10px;
 }
@@ -190,14 +187,6 @@ body {
 }
 .about .about__text {
   margin: 0px 0px 10px 0px;
-}
-.about .about__title {
-  margin: 0px 0px 50px 0px;
-}
-@media (max-width: 767px) {
-  .about .about__title {
-    margin: 0px 0px 30px 0px;
-  }
 }
 .about .about_image img {
   border-radius: 0px 40px 0px 40px;
@@ -216,18 +205,15 @@ body {
   }
 }
 
-@media (max-width: 767px) {
-  .about {
-    margin: 0px 0px 30px 0px;
-  }
-}
 .block {
   position: relative;
   z-index: 10;
+  margin-bottom: 50px;
 }
 .block__title {
   font-weight: 700;
   letter-spacing: 2px;
+  margin-bottom: 50px;
 }
 @media (max-width: 767px) {
   .block__title {
@@ -237,6 +223,11 @@ body {
 @media (min-width: 767px) {
   .block__title {
     font-size: calc(25px + 34 * (100vw / 1280));
+  }
+}
+@media (max-width: 767px) {
+  .block__title {
+    margin: 0px 0px 30px 0px;
   }
 }
 .block .block__title-circle {
@@ -266,6 +257,11 @@ body {
   width: 100%;
 }
 
+@media (max-width: 767px) {
+  .block {
+    margin: 0px 0px 30px 0px;
+  }
+}
 .circle {
   background-color: #4E0E1F;
   border-radius: 50%;
@@ -283,17 +279,6 @@ body {
   }
 }
 
-.portfolio {
-  margin: 0px 0px 50px 0px;
-}
-.portfolio .portfolio__title {
-  margin: 0px 0px 50px 0px;
-}
-@media (max-width: 767px) {
-  .portfolio .portfolio__title {
-    margin: 0px 0px 30px 0px;
-  }
-}
 .portfolio .portfolio__circle {
   top: 5px;
 }
@@ -308,11 +293,6 @@ body {
   }
 }
 
-@media (max-width: 767px) {
-  .portfolio {
-    margin: 0px 0px 30px 0px;
-  }
-}
 .portfolio__items {
   display: grid;
   gap: 10px;
@@ -344,17 +324,6 @@ body {
 @media (min-width: 1339px) {
   .last_item {
     display: none;
-  }
-}
-.price {
-  margin: 0px 0px 50px 0px;
-}
-.price .price__title {
-  margin: 0px 0px 50px 0px;
-}
-@media (max-width: 767px) {
-  .price .price__title {
-    margin: 0px 0px 30px 0px;
   }
 }
 .price .price__circle {
@@ -417,11 +386,6 @@ body {
   }
 }
 
-@media (max-width: 767px) {
-  .price {
-    margin: 0px 0px 30px 0px;
-  }
-}
 .table {
   padding: 10px;
   border: 1px solid #fff;
@@ -452,12 +416,6 @@ body {
 }
 .table .table__item-label {
   padding-right: 3px;
-}
-.swiper {
-  margin: 0px 0px 50px 0px;
-}
-.swiper .swiper__title {
-  margin: 0px 0px 50px 0px;
 }
 .swiper .swiper__title::before {
   content: "";
@@ -497,11 +455,6 @@ body {
   .swiper .swiper__title::before {
     width: calc(90px + 93.5 * (100vw / 1280));
     height: calc(90px + 93.5 * (100vw / 1280));
-  }
-}
-@media (max-width: 767px) {
-  .swiper .swiper__title {
-    margin: 0px 0px 30px 0px;
   }
 }
 .swiper .swiper-slide {
@@ -550,11 +503,6 @@ body {
   }
 }
 
-@media (max-width: 767px) {
-  .swiper {
-    margin: 0px 0px 30px 0px;
-  }
-}
 .box .box__title {
   margin: 0px 0px 10px 0px;
 }
@@ -585,12 +533,10 @@ body {
 }
 
 .form {
-  margin: 0px 0px 50px 0px;
   position: relative;
   z-index: 0;
 }
 .form .form__title {
-  margin: 0px 0px 50px 0px;
   position: relative;
   z-index: 1;
 }
@@ -635,11 +581,6 @@ body {
      object-fit: cover;
   height: 100%;
   width: 100%;
-}
-@media (max-width: 767px) {
-  .form .form__title {
-    margin: 0px 0px 30px 0px;
-  }
 }
 .form__body {
   padding: 0 20px;
@@ -774,6 +715,7 @@ textarea {
 }
 
 footer {
+  margin-top: 20px;
   background-color: #4E0E1F;
   padding: 20px;
   width: 100%;
@@ -785,7 +727,6 @@ footer {
 }
 .foot .foot__title {
   margin: 0px 0px 10px 0px;
-  text-align: right;
 }
 @media (max-width: 767px) {
   .foot .foot__title {
@@ -804,7 +745,7 @@ footer {
 }
 
 .foco {
-  flex: 0 1 auto;
+  flex: 0 1 25%;
   display: flex;
   flex-direction: column;
 }
@@ -845,7 +786,7 @@ footer {
   }
 }
 .middle {
-  flex: 1 0 auto;
+  flex: 1 0 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -866,7 +807,7 @@ footer {
 }
 
 .right {
-  flex: 0 1 auto;
+  flex: 0 1 25%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
